--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,6 @@ header p {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 40px;
   left: 50%;
   /* Top will be calculated and set by JavaScript */
 }
@@ -193,11 +192,21 @@ header p {
 }
 
 .service-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   opacity: 0;
   transform: translateX(30px);
   transition: all 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  max-width: 500px;
-  width: 100%;
+  padding: 40px;
+  box-sizing: border-box;
 }
 
 .service-content.active {
@@ -222,6 +231,9 @@ header p {
 .service-content ul {
   list-style: none;
   padding: 0;
+  margin: 0;
+  text-align: left;
+  max-width: 400px;
 }
 
 .service-content li {
@@ -230,6 +242,7 @@ header p {
   margin-bottom: 12px;
   position: relative;
   padding-left: 25px;
+  text-align: left;
 }
 
 .service-content li:before {
